# python-uart-scc1

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-docs.yml  publish-test.yml  publish.yml  publish_test.yml  test.yml
docs/: api.rst  conf.py  index.rst
examples/scc1_slf3x_example/: sfl3x_usage.py  slf3x_totalizer_usage.py  slf3x_usage.py
examples/scc1_usb_to_i2c/: scc1_usb_2_i2c_usage.py
sensirion_uart_scc1/: scc1_exceptions.py  scc1_i2c_transceiver.py  scc1_shdlc_device.py
sensirion_uart_scc1/drivers/: scc1_ld20.py  scc1_sf06.py  scc1_slf3x.py  slf_common.py
sensirion_uart_scc1/protocols/: i2c_transceiver.py  shdlc_transceiver.py
tests/: conftest.py  test_ld20.py  test_package_import.py  test_scc1_shdlc_device.py  test_sf06.py  test_slf3x.py
